MDEV-4161 Assertion `status_var.memory_used == 0' fails in virtual THD::~THD()

init join->top_join_tab_count to be in sync with join->join_tab=stat,
otherwise a query can be killed in-between and join_tab's won't be deleted
(JOIN::cleanup won't call JOIN_TAB::cleanup)